modified programs logic
The logic of the program has been changed;
correction of the main methods;
added logging; added Swagger;
added a request to the API described by swagger from the example
