# internal/handlers/songs-handler.go
@@ -6,8 +6,9 @@ import (
 	"github.com/Ktuty/internal/models"
 	"github.com/gorilla/mux"
 	"github.com/sirupsen/logrus"
+	"io"
 	"net/http"
-	"regexp"
+	"net/url"
 	"strconv"
 	"strings"
 )
@@ -25,6 +26,8 @@ import (
 //	@Param			releaseDate	query		string	false	"Release date"
 //	@Param			link		query		string	false	"Link"
 //	@Success		200			{object}	models.Songs
+//	@Failure		400			{object}	models.ErrorResponse
+//	@Failure		500			{object}	models.ErrorResponse
 //	@Router			/songs [get]
 func (h *Handler) Songs(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
@@ -32,7 +35,10 @@ func (h *Handler) Songs(w http.ResponseWriter, r *http.Request) {
 	// Получение номера страницы и размера страницы из параметров запроса
 	page := getQueryParamAsInt(r, "page", 1)
 	pageSize := getQueryParamAsInt(r, "pageSize", 10)
-	logrus.Debugf("Songs: page=%d, pageSize=%d", page, pageSize)
+	logrus.WithFields(logrus.Fields{
+		"page":     page,
+		"pageSize": pageSize,
+	}).Info("Songs: page and pageSize parameters")
 
 	// Создание фильтра для поиска песен
 	filter := models.Songs{
@@ -42,12 +48,12 @@ func (h *Handler) Songs(w http.ResponseWriter, r *http.Request) {
 		ReleaseDate: r.URL.Query().Get("releaseDate"),
 		Link:        r.URL.Query().Get("link"),
 	}
-	logrus.Debugf("Songs: filter=%+v", filter)
+	logrus.WithField("filter", filter).Info("Songs: filter parameters")
 
 	// Получение списка песен с использованием сервиса
 	songs, totalPages, err := h.services.GetAll(filter, page, pageSize)
 	if err != nil {
-		logrus.Printf("Ошибка при получении песен: %v", err)
+		logrus.WithError(err).Error("Ошибка при получении песен")
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
@@ -64,23 +70,25 @@ func (h *Handler) Songs(w http.ResponseWriter, r *http.Request) {
 		CurrentPage: page,
 		PageSize:    pageSize,
 	}
-	logrus.Debugf("Songs: response=%+v", response)
+	logrus.WithField("response", response).Info("Songs: response")
 
 	// Кодирование ответа в JSON
 	if err := json.NewEncoder(w).Encode(response); err != nil {
-		logrus.Printf("Ошибка при кодировании ответа: %v", err)
+		logrus.WithError(err).Error("Ошибка при кодировании ответа")
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
 }
 
 //	@Summary		Create a new song
-//	@Description	Create a new song
+//	@Description	Create a new song by sending a request to an external API and then saving the song details.
 //	@Tags			songs
 //	@Accept			json
 //	@Produce		json
 //	@Param			song	body	models.Songs	true	"Song details"
 //	@Success		201
+//	@Failure		400	{object}	models.ErrorResponse
+//	@Failure		500	{object}	models.ErrorResponse
 //	@Router			/songs [post]
 func (h *Handler) NewSong(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
@@ -91,16 +99,54 @@ func (h *Handler) NewSong(w http.ResponseWriter, r *http.Request) {
 	// Декодирование JSON из тела запроса
 	err := json.NewDecoder(r.Body).Decode(&song)
 	if err != nil {
-		logrus.Printf("Ошибка при декодировании JSON: %v", err)
+		logrus.WithError(err).Error("Ошибка при декодировании JSON")
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
 
-	logrus.Printf("Новая песня: %v дата: %#v", song, song.ReleaseDate)
+	songStr := url.QueryEscape(song.Song)
+	groupStr := url.QueryEscape(song.Group)
+
+	apiURL := fmt.Sprintf("%s?group=%s&song=%s", h.url, groupStr, songStr)
+	logrus.WithField("apiURL", apiURL).Info("Requesting data from external API")
+
+	resp, err := http.Get(apiURL)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+	}
+	defer resp.Body.Close()
+
+	logrus.WithField("status", resp.StatusCode).Info("Received response from external API")
+
+	if resp.StatusCode != http.StatusOK {
+		logrus.WithField("status", resp.StatusCode).Error("External API returned non-OK status")
+		http.Error(w, "External API returned non-OK status", http.StatusInternalServerError)
+		return
+	}
+
+	body, err := io.ReadAll(resp.Body)
+	if err != nil {
+		logrus.WithError(err).Error("Failed to read response body")
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	logrus.WithField("responseBody", string(body)).Info("Response body from external API")
+
+	if err := json.Unmarshal(body, &song); err != nil {
+		logrus.WithError(err).Error("Failed to unmarshal song data")
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	logrus.WithFields(logrus.Fields{
+		"song":        song,
+		"releaseDate": song.ReleaseDate,
+	}).Info("Новая песня")
 
 	// Создание новой песни с использованием сервиса
 	if err := h.services.Create(song); err != nil {
-		logrus.Printf("Ошибка при создании песни: %v", err)
+		logrus.WithError(err).Error("Ошибка при создании песни")
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
@@ -116,28 +162,30 @@ func (h *Handler) NewSong(w http.ResponseWriter, r *http.Request) {
 //	@Param			id		path		int	true	"Song ID"
 //	@Param			vers	query		int	false	"Verse number"	default(0)
 //	@Success		200		{object}	models.Songs
+//	@Failure		400		{object}	models.ErrorResponse
+//	@Failure		500		{object}	models.ErrorResponse
 //	@Router			/songs/{id} [get]
 func (h *Handler) SongByID(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 
 	// Получение номера куплета из параметров запроса
 	vers := getQueryParamAsInt(r, "vers", 0)
-	logrus.Debugf("SongByID: vers=%d", vers)
+	logrus.WithField("vers", vers).Info("SongByID: verse number")
 
 	// Получение ID песни из переменных маршрута
 	vars := mux.Vars(r)
 	songID, err := strconv.Atoi(vars["id"])
 	if err != nil {
-		logrus.Printf("Ошибка при преобразовании songID в int: %v", err)
+		logrus.WithError(err).Error("Ошибка при преобразовании songID в int")
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-	logrus.Debugf("SongByID: songID=%d", songID)
+	logrus.WithField("songID", songID).Info("SongByID: songID")
 
 	// Получение песни по ID с использованием сервиса
 	song, err := h.services.GetByID(songID)
 	if err != nil {
-		logrus.Printf("Ошибка при получении песни: %v", err)
+		logrus.WithError(err).Error("Ошибка при получении песни")
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
@@ -146,7 +194,7 @@ func (h *Handler) SongByID(w http.ResponseWriter, r *http.Request) {
 	if vers != 0 {
 		verse, err := splitTextDoubleMargins(song.Text, vers-1)
 		if err != nil {
-			logrus.Printf("Ошибка при разделении текста на куплеты: %v", err)
+			logrus.WithError(err).Error("Ошибка при разделении текста на куплеты")
 			http.Error(w, err.Error(), http.StatusInternalServerError)
 			return
 		}
@@ -156,7 +204,7 @@ func (h *Handler) SongByID(w http.ResponseWriter, r *http.Request) {
 
 	// Кодирование ответа в JSON
 	if err := json.NewEncoder(w).Encode(song); err != nil {
-		logrus.Printf("Ошибка при кодировании ответа: %v", err)
+		logrus.WithError(err).Error("Ошибка при кодировании ответа")
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
@@ -170,6 +218,8 @@ func (h *Handler) SongByID(w http.ResponseWriter, r *http.Request) {
 //	@Param			id		path	int				true	"Song ID"
 //	@Param			song	body	models.Songs	true	"Song details"
 //	@Success		200
+//	@Failure		400	{object}	models.ErrorResponse
+//	@Failure		500	{object}	models.ErrorResponse
 //	@Router			/songs/{id} [patch]
 func (h *Handler) UpdateSong(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
@@ -178,11 +228,11 @@ func (h *Handler) UpdateSong(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	songID, err := strconv.Atoi(vars["id"])
 	if err != nil {
-		logrus.Printf("Ошибка при преобразовании songID в int: %v", err)
+		logrus.WithError(err).Error("Ошибка при преобразовании songID в int")
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-	logrus.Debugf("UpdateSong: songID=%d", songID)
+	logrus.WithField("songID", songID).Info("UpdateSong: songID")
 
 	var song models.Songs
 	defer r.Body.Close()
@@ -190,14 +240,14 @@ func (h *Handler) UpdateSong(w http.ResponseWriter, r *http.Request) {
 	// Декодирование JSON из тела запроса
 	err = json.NewDecoder(r.Body).Decode(&song)
 	if err != nil {
-		logrus.Printf("Ошибка при декодировании JSON: %v", err)
+		logrus.WithError(err).Error("Ошибка при декодировании JSON")
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
 
 	// Обновление песни с использованием сервиса
 	if err := h.services.Update(songID, song); err != nil {
-		logrus.Printf("Ошибка при обновлении песни: %v", err)
+		logrus.WithError(err).Error("Ошибка при обновлении песни")
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
@@ -212,6 +262,8 @@ func (h *Handler) UpdateSong(w http.ResponseWriter, r *http.Request) {
 //	@Produce		json
 //	@Param			id	path	int	true	"Song ID"
 //	@Success		200
+//	@Failure		400	{object}	models.ErrorResponse
+//	@Failure		500	{object}	models.ErrorResponse
 //	@Router			/songs/{id} [delete]
 func (h *Handler) DeleteSongs(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
@@ -220,15 +272,15 @@ func (h *Handler) DeleteSongs(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	songID, err := strconv.Atoi(vars["id"])
 	if err != nil {
-		logrus.Printf("Ошибка при преобразовании songID в int: %v", err)
+		logrus.WithError(err).Error("Ошибка при преобразовании songID в int")
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-	logrus.Debugf("DeleteSongs: songID=%d", songID)
+	logrus.WithField("songID", songID).Info("DeleteSongs: songID")
 
 	// Удаление песни с использованием сервиса
 	if err := h.services.Delete(songID); err != nil {
-		logrus.Printf("Ошибка при удалении песни: %v", err)
+		logrus.WithError(err).Error("Ошибка при удалении песни")
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
@@ -239,56 +291,31 @@ func (h *Handler) DeleteSongs(w http.ResponseWriter, r *http.Request) {
 // Функция для получения параметра из запроса в виде целого числа
 func getQueryParamAsInt(r *http.Request, param string, defaultValue int) int {
 	valueStr := r.URL.Query().Get(param)
-	logrus.Debugf("getQueryParamAsInt: param=%s, valueStr=%s", param, valueStr)
+	logrus.WithFields(logrus.Fields{
+		"param":    param,
+		"valueStr": valueStr,
+	}).Debug("getQueryParamAsInt: param and valueStr")
 	if valueStr == "" {
 		return defaultValue
 	}
 	value, err := strconv.Atoi(valueStr)
 	if err != nil {
-		logrus.Debugf("getQueryParamAsInt: error converting valueStr to int: %v", err)
+		logrus.WithFields(logrus.Fields{
+			"param": param,
+			"error": err,
+			"value": valueStr,
+		}).Debug("getQueryParamAsInt: error converting valueStr to int")
 		return defaultValue
 	}
 	return value
 }
 
 // Функция для разделения текста на куплеты
-func splitTextIntoVerses(text string, vers int) (string, error) {
-	logrus.Debugf("splitTextIntoVerses: text=%s, vers=%d", text, vers)
-	// Регулярное выражение для нахождения куплетов (тегов)
-	re := regexp.MustCompile(`(?m)(\[[^]]+\])`)
-	// Разделяем текст на части по тегам
-	parts := re.Split(text, -1)
-
-	// Создание среза для куплетов
-	verses := make([]string, 0)
-	for i := 0; i < len(parts); i++ {
-		// Добавляем текущее разделение в срез, если оно не пустое
-		verse := strings.TrimSpace(parts[i])
-		if verse != "" {
-			verses = append(verses, verse)
-
-			// Если следующий элемент - это тег, добавляем его к куплету
-			if i < len(parts)-1 {
-				tag := strings.TrimSpace(re.FindString(text))
-				if tag != "" {
-					verses[len(verses)-1] = tag + "\n" + verses[len(verses)-1]
-					// Удаляем использованный тег для следующей итерации
-					text = strings.Replace(text, tag, "", 1)
-				}
-			}
-		}
-	}
-
-	// Проверяем индекс куплета
-	if vers < 0 || vers >= len(verses) {
-		return "", fmt.Errorf("неверный индекс куплета: %d", vers+1)
-	}
-	return strings.TrimSpace(verses[vers]), nil
-}
-
-// Функция для разделения текста на куплеты
 func splitTextDoubleMargins(text string, vers int) (string, error) {
-	logrus.Debugf("splitTextDoubleMargins: text=%s, vers=%d", text, vers)
+	logrus.WithFields(logrus.Fields{
+		"text": text,
+		"vers": vers,
+	}).Debug("splitTextDoubleMargins: text and vers")
 	parts := strings.Split(text, "\n\n")
 
 	// Проверка границ массива
